# next-move

./: .gitignore  README.md  next_move.py  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
docs/: COMMERCIAL.md  MONETIZATION.md
examples/: demo-report.md
examples/demo-project/: README.md  app.py  cli.py  dashboard.py  worker.py
