[project]
name = "next-move"
version = "0.1.0"
description = "Generate practical next moves for a repository."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Project contributors" }
]
keywords = ["roadmap", "github", "productivity", "open-source", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
]

[project.scripts]
next-move = "next_move:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

